force-app/main/default/objects/OIP_Config__mdt/OIP_Config__mdt.object-meta.xml
<CustomObject>
    <fullName>OIP_Config__mdt</fullName>
    <label>OIP Config</label>
    <pluralLabel>OIP Configs</pluralLabel>
</CustomObject>