force-app/main/default/objects/OIP_Config__mdt/fields/OIP_DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>OIP_DefaultValue__c</fullName>
    <label>Default Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>