force-app/main/default/objects/OIP_Config__mdt/fields/OIP_Description__c.field-meta.xml
<CustomField>
    <fullName>OIP_Description__c</fullName>
    <label>Description</label>
    <type>Text</type>
    <length>255</length>
</CustomField>