force-app/main/default/objects/OIP_Config__mdt/fields/OIP_HealthCloudMode__c.field-meta.xml
<CustomField>
    <fullName>OIP_HealthCloudMode__c</fullName>
    <label>Health Cloud Mode</label>
    <type>Checkbox</type>
    <required>true</required>
    <defaultValue>false</defaultValue>
</CustomField>