force-app/main/default/objects/OIP_Config__mdt/fields/OIP_IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>OIP_IsEnabled__c</fullName>
    <label>Is Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>